# Sber_test_task

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  тестовое.md
alembic/: env.py
alembic/versions/: 07b199114faf_initial_migration.py  6246a2a56f8d_initial_migration.py
app/: all_models.py  main.py
app/core/: config.py  db.py  dependencies.py  jwt.py  security.py
app/models/: models.py  token.py  verification_code.py
app/routers/: auth.py  payments.py  users.py
app/schemas/: auth.py  payments.py  users.py
app/services/: auth.py  payments.py
app/utils/: lg.py
tests/: conftest.py  test_auth.py  test_auth_workflow.py
